# jmdict-ast

./: default.nix  dtd.txt  jmdict-ast.cabal  jmdict-xml-parser.cabal
src/Data/JMDict/: AST.hs
src/Data/JMDict/AST/: AST.hs  Parser.hs
src/Data/JMDict/XML/: Parser.hs
