name:                jmdict-ast
version:             0.2.0.0
synopsis:            AST for JMDict
license:             MIT
license-file:        LICENSE
author:              Divam
maintainer:          dfordivam@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:   Data.JMDict.AST

  -- other-modules:       
  other-extensions:    
                       LambdaCase
                     , RankNTypes
                     , OverloadedStrings

  build-depends:       base
                     , data-default
                     , lens
                     , text
                     , containers

  hs-source-dirs:      src
  default-language:    Haskell2010
