name:                jmdict-xml-parser
version:             0.2.0.0
synopsis:            Parser for JMDict XML files.
--description:         This is mostly an internal package, designed to parse the JMDict XML
--file and produce a more usable database. The goal here is to use
--sqlite3 to be more accessible than using jmdictDB which uses
--postgres.
license:             MIT
license-file:        LICENSE
author:              Divam, Jared Hance
maintainer:          dfordivam@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.JMDict.XML.Parser
                       Data.JMDict.AST.AST
                       Data.JMDict.AST.Parser

  -- other-modules:       
  other-extensions:    
                       LambdaCase
                     , RankNTypes
                     , OverloadedStrings
                     , TemplateHaskell

  build-depends:       base
                     , conduit
                     , data-default
                     , exceptions
                     , lens
                     , text
                     , xml-conduit
                     , xml-types
                     , containers

  hs-source-dirs:      src
  default-language:    Haskell2010
